fix: padding on data to not be covered by navbar

--- a/src/components/planetData.css
+++ b/src/components/planetData.css
@@ -1,6 +1,6 @@
 #planetData {
     background: linear-gradient(45deg, rgb(114 79 0),rgb(0 71 74), rgb(2, 0, 33));
-    padding: 10px 5px 10px 5px; 
+    padding: 10px 5px 110px 5px; 
 }
 #planetData table {
     margin: 0 auto;
